<resources>
    <string name="app_name_release">AMCustomKeyboard</string>
    <string name="app_name_debug">AMCustomKeyboard (Debug)</string>
    <string name="ime_name">AMCustomKeyboard</string>
    <string name="short_description">Lightweight and privacy-conscious virtual keyboard for Android.</string>
    <string name="store_description">The main feature is that you can type more characters by swiping the keys towards the corners.\n\nThis application was originally designed for programmers using Termux.\nNow perfect for everyday use.\n\nThis application contains no ads and is Open Source.</string>
    <string name="pref_portrait">In portrait mode</string>
    <string name="pref_portrait_unfolded">In portrait mode unfolded</string>
    <string name="pref_landscape">In landscape mode</string>
    <string name="pref_landscape_unfolded">In landscape mode unfolded</string>
    <string name="pref_category_layout">Layout and Keymap</string>
    <string name="pref_label_brightness">Adjust label brightness</string>
    <string name="pref_keyboard_opacity">Adjust keyboard background opacity</string>
    <string name="pref_key_opacity">Adjust key opacity</string>
    <string name="pref_key_activated_opacity">Adjust pressed key opacity</string>
    <string name="pref_layout_e_system">System settings</string>
    <string name="pref_layout_e_custom">Custom layout</string>
    <string name="pref_layouts_add">Add an alternate layout</string>
    <string name="pref_layouts_keymaps_header">Keymaps</string>
    <string name="pref_layouts_add_keymap">Add new Keymap JSON</string>
    <string name="pref_layouts_item">Layout %1$d: %2$s</string>
    <string name="pref_layouts_remove_custom">Remove layout</string>
    <string name="pref_custom_layout_title">Custom layout</string>
    <string name="pref_keymap_title">Keymap</string>
    <string name="pref_keymap_remove">Remove Keymap</string>
    <string name="pref_show_number_row_no_number_row">No number row</string>
    <string name="pref_show_number_row_no_symbols">Number row without symbols</string>
    <string name="pref_show_number_row_symbols">Number row with symbols</string>
    <string name="pref_show_numpad_title">Show NumPad</string>
    <string name="pref_show_numpad_never">Never</string>
    <string name="pref_show_numpad_landscape">Only in landscape mode</string>
    <string name="pref_show_numpad_always">Always</string>
    <string name="pref_number_row_title">Show number row</string>
    <string name="pref_numpad_layout">NumPad layout</string>
    <string name="pref_numpad_layout_e_high_first">High digits first</string>
    <string name="pref_numpad_layout_e_low_first">Low digits first</string>
    <string name="pref_extra_keys_title">Add keys to the keyboard</string>
    <string name="pref_extra_keys_custom">Add custom keys</string>
    <string name="pref_extra_keys_internal">Select keys to add to the keyboard</string>
    <string name="pref_category_suggestions">Suggestions</string>
    <string name="pref_suggestions_title">Suggestions</string>
    <string name="pref_suggestions_summary">Enable word completion and spell checking</string>
    <string name="pref_space_bar_auto_complete_title">Autocomplete with the space bar</string>
    <string name="pref_space_bar_auto_complete_summary">Enter the best suggestion by pressing space</string>
    <string name="pref_category_typing">Typing</string>
    <string name="pref_swipe_dist_title">Swiping distance</string>
    <string name="pref_swipe_dist_summary">Distance of characters in the corners of the keys (%s)</string>
    <string name="pref_long_timeout_title">Long press timeout</string>
    <string name="pref_long_interval_title">Key repeat interval</string>
    <string name="pref_keyrepeat_enabled">Key repeat on long press</string>
    <string name="pref_lock_double_tap_title">Double tap on shift for caps lock</string>
    <string name="pref_lock_double_tap_summary">You can lock any modifier by holding it</string>
    <string name="pref_category_behavior">Behavior</string>
    <string name="pref_autocapitalisation_title">Automatic capitalisation</string>
    <string name="pref_autocapitalisation_summary">Press Shift at the beginning of a sentence</string>
    <string name="pref_change_method_key_replacement_title">Switching between input methods</string>
    <string name="pref_change_method_key_replacement_e_picker">Show the input method picker (long press)</string>
    <string name="pref_change_method_key_replacement_e_prev">Switch to last used</string>
    <string name="pref_change_method_key_replacement_e_next">Switch to the next in the list</string>
    <string name="pref_vibrate_custom">Custom vibration</string>
    <string name="pref_vibrate_duration_title">Vibration intensity</string>
    <string name="pref_number_entry_title">Layout when typing numbers, dates, and phone numbers</string>
    <string name="pref_number_entry_layout_pin">PIN Entry</string>
    <string name="pref_number_entry_layout_number">Number pane</string>
    <string name="pref_number_entry_layout_normal">Use the main layout</string>
    <string name="pref_category_style">Style</string>
    <string name="pref_margin_bottom_title">Margin bottom</string>
    <string name="pref_keyboard_height_title">Keyboard height</string>
    <string name="pref_horizontal_margin_title">Horizontal margin</string>
    <string name="pref_character_size_title">Label size</string>
    <string name="pref_character_size_summary">Size of characters displayed on the keyboard (%.2fx)</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_e_system">System settings</string>
    <string name="pref_theme_e_dark">Dark</string>
    <string name="pref_theme_e_light">Light</string>
    <string name="pref_theme_e_black">Black</string>
    <string name="pref_theme_e_altblack">Alternative Black</string>
    <string name="pref_theme_e_white">White</string>
    <string name="pref_theme_e_epaper">ePaper</string>
    <string name="pref_theme_e_desert">Desert</string>
    <string name="pref_theme_e_jungle">Jungle</string>
    <string name="pref_theme_e_monet">Monet (System)</string>
    <string name="pref_theme_e_monetlight">Monet (Light)</string>
    <string name="pref_theme_e_monetdark">Monet (Dark)</string>
    <string name="pref_theme_e_rosepine">Rosé Pine</string>
    <string name="pref_theme_e_everforestlight">Everforest Light</string>
    <string name="pref_theme_e_cobalt">Cobalt</string>
    <string name="pref_theme_e_pine">Pine</string>
    <string name="pref_theme_e_epaperblack">ePaper Black</string>
    <string name="pref_swipe_dist_e_very_short">Very short</string>
    <string name="pref_swipe_dist_e_short">Short</string>
    <string name="pref_swipe_dist_e_default">Normal</string>
    <string name="pref_swipe_dist_e_far">Far</string>
    <string name="pref_swipe_dist_e_very_far">Very far</string>
    <string name="pref_key_horizontal_space">Horizontal spacing between the keys</string>
    <string name="pref_key_vertical_space">Vertical spacing between the keys</string>
    <string name="pref_border_config_title">Customize borders</string>
    <string name="pref_border_width_title">Border Width</string>
    <string name="pref_corners_radius_title">Corner radius</string>
    <string name="pref_circle_sensitivity_title">Circle gesture sensitivity</string>
    <string name="pref_circle_sensitivity_e_high">High</string>
    <string name="pref_circle_sensitivity_e_medium">Medium</string>
    <string name="pref_circle_sensitivity_e_low">Low</string>
    <string name="pref_circle_sensitivity_e_disabled">Disabled</string>
    <string name="pref_slider_sensitivity_title">Space bar slider sensitivity</string>
    <string name="pref_slider_sensitivity_slow">Slow</string>
    <string name="pref_slider_sensitivity_medium">Medium</string>
    <string name="pref_slider_sensitivity_fast">Fast</string>
    <string name="key_action_next">Next</string>
    <string name="key_action_done">Done</string>
    <string name="key_action_go">Go</string>
    <string name="key_action_prev">Prev</string>
    <string name="key_action_search">Search</string>
    <string name="key_action_send">Send</string>
    <string name="launcher_button_imesettings">Enable keyboard</string>
    <string name="launcher_button_imepicker">Select keyboard</string>
    <string name="launcher_button_dictionaries">Install dictionaries</string>
    <string name="launcher_description">This application is a virtual keyboard. Go to the system settings by clicking on the button below and enable AMCustomKeyboard.</string>
    <string name="launcher_sourcecode">This is a free and open source application. You can find the source code and modify the code as you wish.</string>
    <string name="launcher_tryhere">After enabling, you can try the keyboard here:</string>
    <string name="launcher_tryhere_hint">Try here</string>
    <string name="key_descr_capslock">Caps lock</string>
    <string name="key_descr_compose">Compose</string>
    <string name="key_descr_switch_greekmath">Greek &amp; math symbols</string>
    <string name="key_descr_change_method">Switch keyboard</string>
    <string name="key_descr_voice_typing">Voice typing</string>
    <string name="key_descr_copy">Copy</string>
    <string name="key_descr_paste">Paste</string>
    <string name="key_descr_cut">Cut</string>
    <string name="key_descr_selectAll">Select all</string>
    <string name="key_descr_pasteAsPlainText">Paste as plain text</string>
    <string name="key_descr_undo">Undo</string>
    <string name="key_descr_redo">Redo</string>
    <string name="key_descr_ª">Ordinal Indicator</string>
    <string name="key_descr_º">Ordinal Indicator</string>
    <string name="key_descr_superscript">Superscript</string>
    <string name="key_descr_subscript">Subscript</string>
    <string name="key_descr_page_up">Page Up</string>
    <string name="key_descr_page_down">Page Down</string>
    <string name="pref_category_clipboard">Clipboard</string>
    <string name="pref_clipboard_history_duration">Clipboard memory duration</string>
    <string name="pref_physical_keyboard_behavior">When a physical keyboard is connected</string>
    <string name="pref_split_layout">Split layout</string>
    <string name="pref_default_layout_title">Default layout on open</string>
    <string name="pref_category_tasker">Tasker Automation</string>
    <string name="pref_tasker_automation_title">Tasker Automation</string>
    <string name="pref_tasker_plugins_link_title">Get AM Tasker Plugins</string>
    <string name="pref_tasker_plugins_link_summary">Tasker plugins for this keyboard (send/return text, request IDs, and more) - opens the releases page</string>
    <string name="pref_tasker_guide_title">How to use Tasker Automation</string>
    <string name="pref_tasker_guide_summary">Full walkthrough: triggers, expand patterns, the config format, and how to build the Tasker task side</string>
    <string name="tasker_builder_activity_title">Automation Builder</string>
    <string name="tasker_builder_activity_subtitle">Build the Tasker Automation config without hand-writing JSON</string>
    <string name="tasker_builder_section_global">Triggers</string>
    <string name="tasker_builder_section_tasks">Keywords → Tasker tasks</string>
    <string name="tasker_builder_section_tasks_hint">Type &lt;amck_replace&gt;keyword or &lt;amck_append&gt;keyword to run the matching task</string>
    <string name="tasker_builder_add_task">+ Add keyword</string>
    <string name="tasker_builder_section_patterns">Expand patterns (amck_patterns)</string>
    <string name="tasker_builder_section_patterns_hint">prefix/regex/suffix are regexes. "Fire only on suffix" off makes the task run live as you type; either way, a reply replaces regex+suffix, and prefix too if "Replace prefix" is on</string>
    <string name="tasker_builder_add_pattern">+ Add expand pattern</string>
    <string name="tasker_builder_save">Save</string>
</resources>