<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
  <PreferenceCategory android:title="@string/pref_category_layout" android:icon="@drawable/ic_cat_layout" android:layout="@layout/pref_category_header">
    <com.adiraimaji.customkeyboard.prefs.LayoutsPreference/>
    <com.adiraimaji.customkeyboard.prefs.DefaultLayoutPreference android:title="@string/pref_default_layout_title" android:icon="@drawable/ic_keyboard"/>
    <PreferenceScreen android:key="extra_keys_screen" android:title="@string/pref_extra_keys_title" android:icon="@drawable/ic_special_key">
      <PreferenceCategory android:title="@string/pref_extra_keys_custom">
        <com.adiraimaji.customkeyboard.prefs.CustomExtraKeysPreference/>
      </PreferenceCategory>
      <com.adiraimaji.customkeyboard.prefs.ExtraKeysPreference android:title="@string/pref_extra_keys_internal"/>
    </PreferenceScreen>
    <ListPreference android:key="number_row" android:title="@string/pref_number_row_title" android:summary="%s" android:defaultValue="no_number_row" android:entries="@array/pref_show_number_row_entries" android:entryValues="@array/pref_show_number_row_values" android:icon="@drawable/ic_num_key"/>
    <ListPreference android:key="show_numpad" android:title="@string/pref_show_numpad_title" android:summary="%s" android:defaultValue="1" android:entries="@array/pref_show_numpad_entries" android:entryValues="@array/pref_show_numpad_values" android:icon="@drawable/ic_numpad"/>
    <ListPreference android:key="numpad_layout" android:title="@string/pref_numpad_layout" android:summary="%s" android:defaultValue="high_first" android:entries="@array/pref_numpad_layout_entries" android:entryValues="@array/pref_numpad_layout_values" android:icon="@drawable/ic_num_order"/>
    <ListPreference android:key="split_layout" android:title="@string/pref_split_layout" android:summary="%s" android:defaultValue="wide" android:entries="@array/pref_split_layout_entries" android:entryValues="@array/pref_split_layout_values" android:icon="@drawable/ic_split_key"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_suggestions" android:layout="@layout/pref_category_header" android:icon="@drawable/ic_cat_suggestions">
    <SwitchPreferenceCompat android:key="suggestions" android:title="@string/pref_suggestions_title" android:summary="@string/pref_suggestions_summary" android:defaultValue="true" android:icon="@drawable/ic_suggestions"/>
    <SwitchPreferenceCompat android:key="space_bar_auto_complete" android:title="@string/pref_space_bar_auto_complete_title" android:summary="@string/pref_space_bar_auto_complete_summary" android:defaultValue="false" android:icon="@drawable/ic_auto_complete"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_typing" android:layout="@layout/pref_category_header" android:icon="@drawable/ic_cat_typing">
    <ListPreference android:key="swipe_dist" android:title="@string/pref_swipe_dist_title" android:summary="@string/pref_swipe_dist_summary" android:defaultValue="15" android:entries="@array/pref_swipe_dist_entries" android:entryValues="@array/pref_swipe_dist_values" android:icon="@drawable/ic_swipe"/>
    <ListPreference android:key="circle_sensitivity" android:icon="@drawable/ic_circle_sensitivity" android:title="@string/pref_circle_sensitivity_title" android:summary="%s" android:defaultValue="2" android:entries="@array/pref_circle_sensitivity_entries" android:entryValues="@array/pref_circle_sensitivity_values"/>
    <ListPreference android:key="slider_sensitivity" android:icon="@drawable/ic_slider_sensitivity" android:title="@string/pref_slider_sensitivity_title" android:summary="%s" android:defaultValue="30" android:entries="@array/pref_slider_sensitivity_entries" android:entryValues="@array/pref_slider_sensitivity_values"/>
    <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="longpress_timeout" android:icon="@drawable/ic_long_press_timeout" android:title="@string/pref_long_timeout_title" android:summary="%sms" android:defaultValue="600" min="50" max="2000"/>
    <SwitchPreferenceCompat android:key="keyrepeat_enabled" android:icon="@drawable/ic_key_repeat" android:title="@string/pref_keyrepeat_enabled" android:defaultValue="true"/>
    <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:icon="@drawable/ic_time" android:key="longpress_interval" android:dependency="keyrepeat_enabled" android:title="@string/pref_long_interval_title" android:summary="%sms" android:defaultValue="25" min="5" max="100"/>
    <SwitchPreferenceCompat android:key="lock_double_tap" android:icon="@drawable/ic_shift" android:title="@string/pref_lock_double_tap_title" android:summary="@string/pref_lock_double_tap_summary" android:defaultValue="false"/>
    <ListPreference android:key="physical_keyboard_behavior" android:icon="@drawable/ic_physical" android:title="@string/pref_physical_keyboard_behavior" android:summary="%s" android:defaultValue="hide" android:entries="@array/pref_physical_keyboard_behavior_entries" android:entryValues="@array/pref_physical_keyboard_behavior_values"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_behavior" android:layout="@layout/pref_category_header" android:icon="@drawable/ic_cat_behavior">
    <SwitchPreferenceCompat android:key="autocapitalisation" android:icon="@drawable/ic_capital" android:title="@string/pref_autocapitalisation_title" android:summary="@string/pref_autocapitalisation_summary" android:defaultValue="true"/>
    <ListPreference android:key="change_method_key_replacement" android:icon="@drawable/ic_keyboard" android:title="@string/pref_change_method_key_replacement_title" android:summary="%s" android:entries="@array/pref_change_method_key_replacement_entries" android:entryValues="@array/pref_change_method_key_replacement_values" android:defaultValue="prev"/>
    <SwitchPreferenceCompat android:key="vibrate_custom" android:icon="@drawable/ic_vibration" android:title="@string/pref_vibrate_custom" android:defaultValue="false"/>
    <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:dependency="vibrate_custom" android:icon="@drawable/ic_intensity" android:key="vibrate_duration" android:title="@string/pref_vibrate_duration_title" android:summary="%sms" android:defaultValue="20" min="0" max="100"/>
    <ListPreference android:key="number_entry_layout" android:icon="@drawable/ic_numpad" android:title="@string/pref_number_entry_title" android:summary="%s" android:defaultValue="pin" android:entries="@array/pref_number_entry_entries" android:entryValues="@array/pref_number_entry_values"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_style" android:layout="@layout/pref_category_header" android:icon="@drawable/ic_cat_style">
    <ListPreference android:key="theme" android:title="@string/pref_theme" android:icon="@drawable/ic_theme" android:summary="%s" android:defaultValue="system" android:entries="@array/pref_theme_entries" android:entryValues="@array/pref_theme_values"/>
    <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="label_brightness" android:icon="@drawable/ic_brightness" android:title="@string/pref_label_brightness" android:summary="%s%%" android:defaultValue="100" min="50" max="100"/>
    <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="keyboard_opacity" android:icon="@drawable/ic_opacity" android:title="@string/pref_keyboard_opacity" android:summary="%s%%" android:defaultValue="100" min="0" max="100"/>
    <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="key_opacity" android:icon="@drawable/ic_opacity" android:title="@string/pref_key_opacity" android:summary="%s%%" android:defaultValue="100" min="0" max="100"/>
    <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="key_activated_opacity" android:icon="@drawable/ic_opacity" android:title="@string/pref_key_activated_opacity" android:summary="%s%%" android:defaultValue="100" min="0" max="100"/>
    <PreferenceScreen android:key="margin_bottom_screen" android:icon="@drawable/ic_margin" android:title="@string/pref_margin_bottom_title">
      <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="margin_bottom_portrait" android:title="@string/pref_portrait" android:summary="%sdp" android:defaultValue="7" min="0" max="250"/>
      <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="margin_bottom_landscape" android:title="@string/pref_landscape" android:summary="%sdp" android:defaultValue="3" min="0" max="120"/>
      <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="margin_bottom_portrait_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%sdp" android:defaultValue="7" min="0" max="250"/>
      <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="margin_bottom_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%sdp" android:defaultValue="3" min="0" max="250"/>
    </PreferenceScreen>
    <PreferenceScreen android:key="keyboard_height_screen" android:icon="@drawable/ic_height" android:title="@string/pref_keyboard_height_title">
      <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="keyboard_height" android:title="@string/pref_portrait" android:summary="%s%%" android:defaultValue="35" min="10" max="100"/>
      <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="keyboard_height_landscape" android:title="@string/pref_landscape" android:summary="%s%%" android:defaultValue="50" min="20" max="65"/>
      <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="keyboard_height_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%s%%" android:defaultValue="35" min="10" max="50"/>
      <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="keyboard_height_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%s%%" android:defaultValue="50" min="20" max="65"/>
    </PreferenceScreen>
    <PreferenceScreen android:key="horizontal_margin_screen"  android:icon="@drawable/ic_margin" android:title="@string/pref_horizontal_margin_title">
      <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="horizontal_margin_portrait" android:title="@string/pref_portrait" android:summary="%sdp" android:defaultValue="3" min="0" max="30"/>
      <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="horizontal_margin_landscape" android:title="@string/pref_landscape" android:summary="%sdp" android:defaultValue="28" min="0" max="200"/>
      <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="horizontal_margin_portrait_unfolded" android:title="@string/pref_portrait_unfolded" android:summary="%sdp" android:defaultValue="3" min="0" max="30"/>
      <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="horizontal_margin_landscape_unfolded" android:title="@string/pref_landscape_unfolded" android:summary="%sdp" android:defaultValue="28" min="0" max="200"/>
    </PreferenceScreen>
    <com.adiraimaji.customkeyboard.prefs.SlideBarPreference android:key="character_size" android:icon="@drawable/ic_lable_size" android:title="@string/pref_character_size_title" android:summary="@string/pref_character_size_summary" android:defaultValue="1.15" min="0.75" max="1.5"/>
    <com.adiraimaji.customkeyboard.prefs.SlideBarPreference android:key="key_vertical_margin" android:icon="@drawable/ic_vertical_spacing" android:title="@string/pref_key_vertical_space" android:summary="%s%%" android:defaultValue="1.5" min="0" max="5"/>
    <com.adiraimaji.customkeyboard.prefs.SlideBarPreference android:key="key_horizontal_margin" android:icon="@drawable/ic_horizontal_spacing" android:title="@string/pref_key_horizontal_space" android:summary="%s%%" android:defaultValue="2" min="0" max="5"/>
    <SwitchPreferenceCompat android:key="border_config" android:icon="@drawable/ic_border" android:title="@string/pref_border_config_title" android:defaultValue="false"/>
    <com.adiraimaji.customkeyboard.prefs.IntSlideBarPreference android:key="custom_border_radius"  android:icon="@drawable/ic_radius" android:title="@string/pref_corners_radius_title" android:summary="%s%%" android:defaultValue="0" min="0" max="100" android:dependency="border_config"/>
    <com.adiraimaji.customkeyboard.prefs.SlideBarPreference android:icon="@drawable/ic_border_width" android:key="custom_border_line_width" android:title="@string/pref_border_width_title" android:summary="%sdp" android:defaultValue="0" min="0" max="5" android:dependency="border_config"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_clipboard" android:layout="@layout/pref_category_header" android:icon="@drawable/ic_cat_clipboard">
    <ListPreference android:key="clipboard_history_duration" android:icon="@drawable/ic_clipboard" android:title="@string/pref_clipboard_history_duration" android:summary="%s" android:defaultValue="5" android:entries="@array/pref_clipboard_duration_entries" android:entryValues="@array/pref_clipboard_duration_values"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_tasker" android:icon="@drawable/ic_cat_tasker" android:layout="@layout/pref_category_header">
    <com.adiraimaji.customkeyboard.prefs.TaskerAutomationPreference app:icon="@drawable/ic_tasker" android:title="@string/pref_tasker_automation_title" />
    <com.adiraimaji.customkeyboard.prefs.TaskerAutomationGuideLinkPreference android:title="@string/pref_tasker_guide_title" android:summary="@string/pref_tasker_guide_summary" android:icon="@drawable/ic_info"/>
    <Preference android:title="@string/pref_tasker_plugins_link_title"  android:summary="@string/pref_tasker_plugins_link_summary" android:icon="@drawable/ic_tasker_plugin">
      <intent android:action="android.intent.action.VIEW" android:data="https://github.com/adiraimaji/AMTaskerPluginsReleases/releases"/>
    </Preference>
  </PreferenceCategory>
</PreferenceScreen>